Fix issue where the footer was being covered...

--- a/resources/site_components/MainCtrl/MainCtrl.styl
+++ b/resources/site_components/MainCtrl/MainCtrl.styl
@@ -25,7 +25,6 @@
   .things-view-container
     position relative
     [ui-view]
-      margin-bottom 100px
       width 100%
       &.ng-enter, &.ng-leave
         position absolute
