--- a/resources/site_components/styles/styles.css
+++ b/resources/site_components/styles/styles.css
@@ -1,5 +1,5 @@
 
-/* line 52 : /Users/kentcdodds/Developer/kcd-angular/resources/site_components/MainCtrl/MainCtrl.styl */
+/* line 51 : /Users/kentcdodds/Developer/kcd-angular/resources/site_components/MainCtrl/MainCtrl.styl */
 
 /* line 1 : /Users/kentcdodds/Developer/kcd-angular/node_modules/grunt-contrib-stylus/node_modules/stylus/lib/functions/index.styl */
 
@@ -28,19 +28,19 @@
 /* line 25 : /Users/kentcdodds/Developer/kcd-angular/resources/site_components/MainCtrl/MainCtrl.styl */
 .main-ctrl .things-view-container{position:relative;}
 /* line 27 : /Users/kentcdodds/Developer/kcd-angular/resources/site_components/MainCtrl/MainCtrl.styl */
-.main-ctrl .things-view-container [ui-view]{margin-bottom:100px;width:100%;}
-/* line 30 : /Users/kentcdodds/Developer/kcd-angular/resources/site_components/MainCtrl/MainCtrl.styl */
+.main-ctrl .things-view-container [ui-view]{width:100%;}
+/* line 29 : /Users/kentcdodds/Developer/kcd-angular/resources/site_components/MainCtrl/MainCtrl.styl */
 .main-ctrl .things-view-container [ui-view].ng-enter,.main-ctrl .things-view-container [ui-view].ng-leave{position:absolute;padding-right:30px;top:0;opacity:0;transition:all .3s ease-in-out}
-/* line 36 : /Users/kentcdodds/Developer/kcd-angular/resources/site_components/MainCtrl/MainCtrl.styl */
+/* line 35 : /Users/kentcdodds/Developer/kcd-angular/resources/site_components/MainCtrl/MainCtrl.styl */
 .main-ctrl .things-view-container [ui-view].ng-enter{position:absolute;padding-right:30px;opacity:0;top:40px}
-/* line 41 : /Users/kentcdodds/Developer/kcd-angular/resources/site_components/MainCtrl/MainCtrl.styl */
+/* line 40 : /Users/kentcdodds/Developer/kcd-angular/resources/site_components/MainCtrl/MainCtrl.styl */
 .main-ctrl .things-view-container [ui-view].ng-enter-active{top:0;opacity:1}
-/* line 44 : /Users/kentcdodds/Developer/kcd-angular/resources/site_components/MainCtrl/MainCtrl.styl */
+/* line 43 : /Users/kentcdodds/Developer/kcd-angular/resources/site_components/MainCtrl/MainCtrl.styl */
 .main-ctrl .things-view-container [ui-view].ng-leave{top:0;opacity:1}
-/* line 47 : /Users/kentcdodds/Developer/kcd-angular/resources/site_components/MainCtrl/MainCtrl.styl */
+/* line 46 : /Users/kentcdodds/Developer/kcd-angular/resources/site_components/MainCtrl/MainCtrl.styl */
 .main-ctrl .things-view-container [ui-view].ng-leave-active{position:absolute;padding-right:30px;opacity:0;top:30px}
 
-/* line 52 : /Users/kentcdodds/Developer/kcd-angular/resources/site_components/ThingCtrl/ThingsCtrl.styl */
+/* line 51 : /Users/kentcdodds/Developer/kcd-angular/resources/site_components/ThingCtrl/ThingsCtrl.styl */
 
 /* line 1 : /Users/kentcdodds/Developer/kcd-angular/node_modules/grunt-contrib-stylus/node_modules/stylus/lib/functions/index.styl */
 
@@ -49,17 +49,17 @@ pre{word-break:normal;word-wrap:normal;}
 /* line 4 : /Users/kentcdodds/Developer/kcd-angular/resources/site_components/ThingCtrl/ThingsCtrl.styl */
 pre code{white-space:pre;word-wrap:normal}
 
-/* line 52 : /Users/kentcdodds/Developer/kcd-angular/resources/site_components/stylus/main.styl */
+/* line 51 : /Users/kentcdodds/Developer/kcd-angular/resources/site_components/stylus/main.styl */
 
 /* line 1 : /Users/kentcdodds/Developer/kcd-angular/node_modules/grunt-contrib-stylus/node_modules/stylus/lib/functions/index.styl */
 
 /* line 1 : /Users/kentcdodds/Developer/kcd-angular/resources/site_components/stylus/main.styl */
 #wrap{margin:0 24px -40px;min-height:100%;height:auto !important}
 /* line 6 : /Users/kentcdodds/Developer/kcd-angular/resources/site_components/stylus/main.styl */
-#footer{background-color:#f5f5f5;height:40px;text-align:center;padding:10px;width:100%}
-/* line 13 : /Users/kentcdodds/Developer/kcd-angular/resources/site_components/stylus/main.styl */
+#footer{margin-top:100px;background-color:#f5f5f5;height:40px;text-align:center;padding:10px;width:100%}
+/* line 14 : /Users/kentcdodds/Developer/kcd-angular/resources/site_components/stylus/main.styl */
 .popover{width:400px}
-/* line 16 : /Users/kentcdodds/Developer/kcd-angular/resources/site_components/stylus/main.styl */
+/* line 17 : /Users/kentcdodds/Developer/kcd-angular/resources/site_components/stylus/main.styl */
 a{cursor:pointer}
-/* line 19 : /Users/kentcdodds/Developer/kcd-angular/resources/site_components/stylus/main.styl */
+/* line 20 : /Users/kentcdodds/Developer/kcd-angular/resources/site_components/stylus/main.styl */
 *{outline:none}
