--- a/resources/site_components/stylus/main.styl
+++ b/resources/site_components/stylus/main.styl
@@ -4,6 +4,7 @@
   height: auto !important;
 
 #footer
+  margin-top 100px
   background-color #F5F5F5
   height 40px
   text-align center
